All the errors have been removed